# UcetniProgramPrautBi

./: .gitignore  CLAUDE.md  LESSONS_LEARNED.md  PRAUT_kontext.md  PRAUT_program.md  README.md  ROADMAP.md  main.py  pyproject.toml
.claude/commands/: kontext.md
.claude/hooks/: install.sh  post-commit  update_kontext.py
domain/banka/: __init__.py  bankovni_transakce.py  bankovni_ucet.py  bankovni_vypis.py
domain/doklady/: doklad.py  errors.py  priloha.py  priloha_repository.py  repository.py  typy.py
domain/firma/: __init__.py  firma.py  pocatecni_stav.py
domain/ocr/: ocr_upload.py
domain/partneri/: __init__.py  partner.py  repository.py
domain/shared/: errors.py  money.py
domain/ucetnictvi/: repository.py  typy.py  ucet.py  ucetni_zaznam.py  uctovy_predpis.py
infrastructure/banka/: __init__.py  csv_parser.py  pdf_statement_parser.py
infrastructure/database/: connection.py  exceptions.py  unit_of_work.py
infrastructure/ocr/: invoice_parser.py  ocr_engine.py
infrastructure/storage/: priloha_storage.py
scripts/: migrate_ocr_uploads_to_prilohy.py  screenshot_doklad_detail.py  screenshot_faze12.py  screenshot_main_window.py  screenshots_faze_10.py  screenshots_faze_11.py  screenshots_faze_13.py  screenshots_faze_14.py  screenshots_faze_6_5.py  screenshots_faze_6_7.py  screenshots_faze_7.py  screenshots_faze_8.py  screenshots_step4.py  seed_chart_of_accounts.py  seed_demo_data.py  test_fonts.py  workflow_step4.py
services/: exceptions.py  zauctovani_service.py
services/banka/: __init__.py  (+4 more)
ui/: __init__.py  app.py  design_tokens.py  main_window.py
(+275 files in other folders)
